feat: Implement comprehensive SEO optimization for branded sitelinks
- Add Organization schema for company info, logos, and contact details
- Add Website schema with sitelinks configuration for key pages
- Implement JSON-LD structured data injection via SEOSchema component
- Enhance robots.txt with crawl directives and social media bot access
- Add OpenGraph and Twitter Card meta tags for social sharing
- Create Google Search Console setup guide with step-by-step instructions
- Create detailed SEO strategy document for branded search optimization
- Add internal linking recommendations for sitelinks visibility

This enables Google to display Blinno branded search results with:
- Organization information and logos
- Sitelinks to Browse Products, Start Selling, Help, and About pages
- Rich snippets in search results
- Proper social media preview cards

--- a/index.html
+++ b/index.html
@@ -16,18 +16,36 @@
     <meta name="description" content="Blinno is the ultimate marketplace for selling products, e-books, courses, creative works, and services. Join thousands of sellers and start your business today." />
     <meta name="author" content="Blinno" />
     <meta name="keywords" content="marketplace, sell online, e-commerce, courses, e-books, creators, events, restaurants" />
+    <meta name="theme-color" content="#1a1a1a" />
+    <meta name="application-name" content="Blinno" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Blinno" />
     <link rel="canonical" href="https://www.blinno.app" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/favicon.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.blinno.app" />
     <meta property="og:title" content="Blinno - The Everything Marketplace" />
     <meta property="og:description" content="One platform to sell, create, and grow your business. From products to courses, Blinno empowers everyone." />
-    <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <meta property="og:url" content="https://www.blinno.app" />
+    <meta property="og:site_name" content="Blinno" />
+    <meta property="og:locale" content="en_US" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://www.blinno.app" />
+    <meta name="twitter:title" content="Blinno - The Everything Marketplace" />
+    <meta name="twitter:description" content="One platform to sell, create, and grow your business. From products to courses, Blinno empowers everyone." />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@blinno" />
+    <meta name="twitter:creator" content="@blinno" />
     <meta name="twitter:site" content="@Blinno" />
     <meta name="twitter:title" content="Blinno - The Everything Marketplace" />
     <meta name="twitter:description" content="One platform to sell, create, and grow your business." />
