fix: Update CSP policy to allow Vercel feedback script and fix CORS for preview URLs

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <!-- Security Headers -->
     <!-- Note: X-Frame-Options is set via HTTP headers in deployment configs (vercel.json, netlify.toml) -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.supabase.co https://*.supabase.in; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://*.supabase.in https://api.flutterwave.com https://api.mapbox.com wss://*.supabase.co wss://*.supabase.in; frame-src 'self' https://*.supabase.co https://*.supabase.in https://checkout.flutterwave.com; object-src 'none'; base-uri 'self'; form-action 'self'; upgrade-insecure-requests;" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.supabase.co https://*.supabase.in https://vercel.live; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://*.supabase.in https://api.flutterwave.com https://api.mapbox.com wss://*.supabase.co wss://*.supabase.in; frame-src 'self' https://*.supabase.co https://*.supabase.in https://checkout.flutterwave.com; object-src 'none'; base-uri 'self'; form-action 'self'; upgrade-insecure-requests;" />
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
     <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
