--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net; 
       font-src 'self' https://fonts.gstatic.com data:; 
       img-src 'self' data: https: blob:; 
+      media-src 'self' https: blob:; 
       connect-src 'self' https://*.supabase.co https://*.supabase.in https://api.flutterwave.com https://api.clickpesa.com https://api.mapbox.com wss://*.supabase.co wss://*.supabase.in; 
       frame-src 'self' https://*.supabase.co https://*.supabase.in https://checkout.flutterwave.com https://vercel.live https://api.clickpesa.com; 
       object-src 'none'; 
